# sea5kg-triangulation

./: .gitignore  CMakeLists.txt  README.md  build_simple.sh  formMain.cpp  formMain.dfm  formMain.h  input.json  make.bat  triangulation.cbproj  triangulation.cpp  wsjcpp.yml
examples/: hard.areas  haspoint.areas  test1.areas  test2.areas  test3.areas  test4.areas  test5.areas  test6.areas
src/: _tr_area.cpp  _tr_area.h  _tr_line.cpp  _tr_line.h  _tr_logger.cpp  _tr_logger.h  _tr_painter.cpp  _tr_painter.h  _tr_point.cpp  _tr_point.h  _tr_triangle.cpp  _tr_triangle.h  _tr_triangulation.cpp  _tr_triangulation.h  _tr_triangulator.cpp  _tr_triangulator.h  app_state.cpp  app_state.h  formMain.cpp  formMain.dfm  formMain.h  main.cpp  sea5kg_triangulation.cpp  sea5kg_triangulation.h
src.wsjcpp/: CMakeLists.txt
src/render/: render.cpp  render.h  render_window.cpp  render_window.h
src/sea5kg-triangulation/: _tr_area.cpp  _tr_area.h  _tr_painter.cpp  _tr_painter.h  _tr_point.h  _tr_triangle.cpp  _tr_triangle.h  _tr_triangulation.h  _tr_triangulator.cpp  _tr_triangulator.h  sea5kg_triangulation.cpp  sea5kg_triangulation.h
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_sea5kg_triangulation_point.cpp
